chore: Add missing import for SimpleGrantedAuthority in User entity